1. полноценная страница входа 2. Дизайн 3.Генерация пароля 4. Добавлено поле Логин 5. Мелкие исправления

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Password Check</string>
+    <string name="app_name">PassMaster</string>
     <string name="invalid_pin_message">Неверный пин код</string>
     <string name="write_message">Введите название сервиса и пароль</string>
 </resources>
